--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Header with Search Bar</title>
+  <title>Eli5NearTx</title>
   <style>
    
     body {
@@ -28,15 +28,24 @@
   </style>
 </head>
 <body>
+  <script>
+    async function explainTx() {
+      const txHash = document.getElementById('tx-hash-input').value;
+      const raw = await fetch(`http://127.0.0.1:5000/tx/${txHash}`);
+      const response = await raw.json();
+      document.getElementById('tx-summary').innerHTML = response.gpt_res;
+    }
+  </script>
   <header>
     <h1>Transaction Hash </h1>
     <p>Enter your hash to have a detailed explaination. </p>
     
     <div class="search-bar">
 
-      <input type="text" placeholder="Search your transaction">
-      <button>Search</button>
+      <input id="tx-hash-input" type="text" placeholder="Search your transaction">
+      <button onclick=explainTx()>Search</button>
     </div>
+    <div id="tx-summary"></div>
   </header>
 </body>
 </html>
